--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -2,11 +2,16 @@
   <%= @post.content %>
 </div>
 <%= form_for post do |f| %>
+  hello
   <%= f.label "Title" %>
   <%= f.text_field :title %>
   <%= f.label "Content" %>
   <%= f.text_area :content %>
+  checks
   <%= f.collection_check_boxes :category_ids, Category.all, :id, :name %>
+  here
+  <br>
+  or make a new category here
   <%= f.fields_for :categories, post.categories.build do |categories_fields| %>
     <%= categories_fields.text_field :name %>
   <% end %>
